frontend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  creationTimestamp: "2022-12-09T06:02:51Z"
  generation: 1
  managedFields:
  - apiVersion: networking.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        .: {}
        f:gateways: {}
        f:hosts: {}
        f:http: {}
    manager: kubectl-create
    operation: Update
    time: "2022-12-09T06:02:51Z"
  name: frontend-vservice
  namespace: traffic-external
  resourceVersion: "1372272"
  selfLink: /apis/networking.istio.io/v1beta1/namespaces/traffic-external/virtualservices/frontend-vservice
  uid: 1a743c8f-ca80-4fb2-ba34-ec5b77cfe81d
spec:
  gateways:
  - frontend-gw
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /frontend
    rewrite:
      uri: /frontend
    route:
    - destination:
        host: frontend
        port:
          number: 3000
