svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-12-09T06:02:51Z"
  labels:
    app: frontend
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":3000,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-create
    operation: Update
    time: "2022-12-09T06:02:51Z"
  name: frontend
  namespace: traffic-external
  resourceVersion: "1372277"
  selfLink: /api/v1/namespaces/traffic-external/services/frontend
  uid: e41c2021-a3db-4113-9904-835e368758dc
spec:
  clusterIP: 172.30.242.41
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
