svc-history.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-12-09T06:02:51Z"
  labels:
    app: history
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-create
    operation: Update
    time: "2022-12-09T06:02:51Z"
  name: history
  namespace: traffic-external
  resourceVersion: "1372284"
  selfLink: /api/v1/namespaces/traffic-external/services/history
  uid: 56e134bd-d7a2-4c77-9a67-d778dee71edd
spec:
  clusterIP: 172.30.48.140
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: history
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
