svc-news.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-12-09T06:02:07Z"
  labels:
    app: news
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":5000,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-create
    operation: Update
    time: "2022-12-09T06:02:07Z"
  name: news
  namespace: traffic-external-news
  resourceVersion: "1371875"
  selfLink: /api/v1/namespaces/traffic-external-news/services/news
  uid: fabfc3f7-ce37-4cee-a558-1383b3824e32
spec:
  clusterIP: 172.30.113.148
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: news
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
